--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+## Thanks to Dedunu Dhananjaya for creating this @ https://gist.github.com/dedunumax/54e82214715e35439227
+
 ##########################
 ## Java
 ##########################
